Make WrappedTaskContext thread safe. Improve cancellation criteria. Add more Unless utilities.